# Ajantis

./: .gitignore  README.md  index.html  package-lock.json  package.json  tools.json  vite.config.ts
src/: App.tsx  eventStore.ts  index.css  index.html  markdown.ts  renderer.js  types.ts
src-static/: index.html
src-tauri/: Cargo.toml  ajantis-config.json  tauri.conf.json  workspace_config.json
src-tauri/src/: agent_config.rs  chat.rs  config_persistence.rs  event_sink.rs  helpers.rs  lib.rs  mcp.rs  memory.rs  models.rs  routing.rs  runs.rs  runtime.rs  state.rs  workspace.rs
